--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,9 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-526.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.62MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-742.7KB/s(Youtube:不良林), server: trojan-ctb-sg01.globalssh.xyz, port: 443, type: trojan, password: !<str> 123456, sni: trojan-ctb-sg01.globalssh.xyz, skip-cert-verify: true}
   - {name: 🇬🇧 英国-325.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 1aa8948e-1ec1-455f-9e0e-16deebe5502e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
-  - {name: 🇨🇳 中国-239.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 26062, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-425.8KB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-2.82MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-764.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
@@ -21,14 +16,9 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +26,9 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +37,9 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +52,9 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +62,9 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +73,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +93,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
 rules:
