--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-325.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-425.8KB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-642.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-918.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.82MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-764.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-425.8KB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.91MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.11MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.90MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.33MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-957.1KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-918.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-425.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
