--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.90MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-957.1KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.33MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-650.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-276.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.60MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-485.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-485.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-167.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-650.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇬🇧 英国-555.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-647.5KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1.63MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-210.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-408.3KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-485.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-647.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-485.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-647.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-485.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-647.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-485.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-647.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-485.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-647.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-485.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-647.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-957.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-485.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-485.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-650.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-647.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
