--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-555.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-1.63MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-167.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-210.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.07MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-294.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.01MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-755.1KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.14MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.10MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇰🇷 韩国-408.3KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇺🇸 美国-993.7KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-636.5KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇫🇷 法国-449.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-256.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-345.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-294.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-993.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-636.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-449.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-256.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-294.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-993.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-636.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-449.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-256.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-294.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-993.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-636.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-449.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-256.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-294.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.01MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-294.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-993.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-636.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-449.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-256.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-294.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-993.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-636.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-449.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-256.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-294.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-993.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-636.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-449.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-256.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-555.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-210.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-294.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.10MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-408.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-993.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-636.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-449.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-256.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
